ファイルを開いた時の直接読み込みへ変更。今後読み上げボタンを画面上に実装させる方針

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,12 @@
     "default_title": "koe-koe配信サイト読み上げツール",
     "default_icon": "icon_48x48.png",
     "default_popup": "main.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://live.koe-koe.com/*"],
+      "js": ["script.js"],
+      "css": ["main.css"]
+    }
+  ]
 }
