--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,7 @@
 },
   "action": {
     "default_title": "koe-koe配信サイト読み上げツール",
-    "default_icon": "icon_48x48.png",
-    "default_popup": "main.html"
+    "default_icon": "icon_48x48.png"
   },
   "content_scripts": [
     {
